--- a/index.html
+++ b/index.html
@@ -1,10 +1,59 @@
+<!-- Brandon Kelly
+CPSC314-01
+html-basics -->
+
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Spongebob Encyclopedia</title>
   </head>
   <body>
-    <!-- Body content goes here -->
+    <header>
+    <h1>SPONGEBOB ENCYCLOPEDIA</h1>
+    
+    <p>
+        SpongeBob SquarePants is an American animated television series created by marine biologist and animator Stephen Hillenburg for Nickelodeon. 
+    </p>
+    </header>
+    <ol>
+      <li>He loves to go jellyfishing</li>
+      <li>He cannot drive a boat to save his life</li>
+    </ol>
+    <a href="https://en.wikipedia.org/wiki/SpongeBob_SquarePants">Learn about King Sponge!</a>
+    <img src='spongebobImage.png' alt=“Spongeboye”>
+    <table border = "3" style="table-layout:fixed">
+      <thead>
+            <tr>
+               <th>Table Header</th>
+               <th>Table Header</th>
+            </tr>
+      </thead>
+      <tr>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Major</th>
+      </tr>
+      <tr>
+        <td>Brandon</td>
+        <td>Kelly</td>
+        <td>Computer Science</td>
+      </tr>
+      <tr>
+        <td>Spongebob</td>
+        <td>Squarepants</td>
+        <td>Krabby Patty Flipper</td>
+      </tr>
+      <tfoot>
+          <tr>
+            <td>TableFooter</td>
+            <td>TableFooter</td>
+          </tr>
+      </tfoot>
+    </table>
   </body>
+  <footer>
+    <p>This is my footer</p>
+    <p>Please do not stare at my footer</p>
+  </footer>
 </html>
