Finished example website from assignment 2

--- a/index.html
+++ b/index.html
@@ -1,16 +1,49 @@
 <!-- Brandon Kelly
 CPSC314-01
-html-css-intro -->
+html-css-intro 
+I was not sure if the white space was intentional
+or if it was just part of the uploaded picture. Included
+it just in case.-->
 
 <!DOCTYPE html>
 <html>
   <head>
     <link rel="reset" type="text/css" href="reset.css">      
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <meta charset="utf-8">
-    <title></title>
+    <title>html-css-intro</title>
+    <ul>
+      <li><a href="#">Home</a>
+      <li><a href="#">Name</a>
+      <li><a href="#">News</a>      
+    </ul>
   </head>
   <body>
-    <!-- Body content goes here -->
+      <h1 align="center">THIS IS MY HEADER</h1>
+      <div id="paragraphs">
+        <h2>ABOUT ME</h2>
+        <p2>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+        </p2>
+        <p>
+        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+        </p>
+      </div>
+      <div id="placeholders">
+        <a id="single_image1" href="#"><img src="http://via.placeholder.com/350x250" alt="350x250!"/></a>
+        <b id="single_image2" href="#"><img src="http://via.placeholder.com/350x350" alt="350x350!"/></b>
+        <span class="stretch"></span>
+        
+      </div>
+      <div id="wrapper">
+       <button type="button">Button</button>
+      </div>
   </body>
+  <footer>
+    <p3>COPYRIGHT 2018</p3>
+    <div id="blankspace">
+
+    </div>
+  </footer>
 </html>
