--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title></title>
+    <meta name="description" content="JS-Intro">
+    <title>JavaScript Intro</title>
   </head>
   <body>
-    <!-- Body content goes here -->
+    <script src="index.js"></script>
   </body>
 </html>
