--- a/assignment.html
+++ b/assignment.html
@@ -11,33 +11,33 @@
     <section id="selection">
       <div class="inner-content">
         <p>Select the number that you want to scroll to:</p>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>4</button>
-        <button>5</button>
+        <button id="buttonOne">1</button>
+        <button id="buttonTwo">2</button>
+        <button id="buttonThree">3</button>
+        <button id="buttonFour">4</button>
+        <button id="buttonFive">5</button>
       </div>
     </section>
     <section class="dark-bg" id="one">
       <div class="inner-content">
         <p>1. Pick a background color:</p>
-        <button>Blue</button>
-        <button>Green</button>
+        <button id="blueButton">Blue</button>
+        <button id="greenButton">Green</button>
       </div>
     </section>
     <section id="two">
       <div class="inner-content">
         <p>2. Click the button to change between a pink and orange background:</p>
         <p>The text on the button will represent the color the user will get.</p>
-        <button>Click for pink!</button>
+        <button id="pinkButton">Click for pink!</button>
       </div>
     </section>
     <section class="dark-bg" id="three">
       <div class="inner-content">
         <p>3. Input text to add to the list below</p>
-        <input type="text">
-        <button>Submit</button>
-        <ul>
+        <input type="text" id="inputText">
+        <button id="submitButton">Submit</button>
+        <ul id="threeList">
           <li>One</li>
           <li>Green</li>
         </ul>
@@ -46,7 +46,7 @@
     <section id="four">
       <div class="inner-content">
         <p>4. If an item is clicked, remove it from the list.</p>
-        <ul>
+        <ul id="fourList">
           <li>Bob</li>
           <li>Tim</li>
           <li>Jack</li>
@@ -59,7 +59,7 @@
         <p>5. If an item is clicked, select it (highlight it) and de-select everything else.</p>
         <p>This doesn't have to be pretty.</p>
         <p>Just change the background color of the selected item with a class.</p>
-        <ul>
+        <ul id="fiveList">
           <li>Bob</li>
           <li>Tim</li>
           <li>Jack</li>
@@ -67,5 +67,6 @@
         </ul>
       </div>
     </section>
+    <script src="index.js"></script>    
   </body>
 </html>
