--- a/index.html
+++ b/index.html
@@ -2,71 +2,22 @@
 <html>
   <head> 
     <meta charset="utf-8"> 
+    <link rel="stylesheet" href="reset.css"> 
+    <link rel="stylesheet" href="index.css">   
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">     
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>JS in the Browser</title> 
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="assignment-styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+    <title>JS JQuery</title> 
   </head> 
+
   <body>
-    <section id="selection">
-      <div class="inner-content">
-        <p>Select the number that you want to scroll to:</p>
-        <button id="buttonOne">1</button>
-        <button id="buttonTwo">2</button>
-        <button id="buttonThree">3</button>
-        <button id="buttonFour">4</button>
-        <button id="buttonFive">5</button>
-      </div>
-    </section>
-    <section class="dark-bg" id="one">
-      <div class="inner-content">
-        <p>1. Pick a background color:</p>
-        <button id="blueButton">Blue</button>
-        <button id="greenButton">Green</button>
-      </div>
-    </section>
-    <section id="two">
-      <div class="inner-content">
-        <p>2. Click the button to change between a pink and orange background:</p>
-        <p>The text on the button will represent the color the user will get.</p>
-        <button id="pinkButton">Click for pink!</button>
-      </div>
-    </section>
-    <section class="dark-bg" id="three">
-      <div class="inner-content">
-        <p>3. Input text to add to the list below</p>
-        <input type="text" id="inputText">
-        <button id="submitButton">Submit</button>
-        <ul id="threeList">
-          <li>One</li>
-          <li>Green</li>
-        </ul>
-      </div>
-    </section>
-    <section id="four">
-      <div class="inner-content">
-        <p>4. If an item is clicked, remove it from the list.</p>
-        <ul id="fourList">
-          <li>Bob</li>
-          <li>Tim</li>
-          <li>Jack</li>
-          <li>Sam</li>          
-        </ul>
-      </div>
-    </section>
-    <section class="dark-bg" id="five">
-      <div class="inner-content">
-        <p>5. If an item is clicked, select it (highlight it) and de-select everything else.</p>
-        <p>This doesn't have to be pretty.</p>
-        <p>Just change the background color of the selected item with a class.</p>
-        <ul id="fiveList">
-          <li>Bob</li>
-          <li>Tim</li>
-          <li>Jack</li>
-          <li>Sam</li>          
-        </ul>
-      </div>
-    </section>
+    <div class="header">
+      <h1>My Friends</h1>
+    </div>
+    <div id="userSection">
+
+    </div>
     <script src="index.js"></script>    
   </body>
+  
 </html>
