--- a/index.html
+++ b/index.html
@@ -1,23 +1,63 @@
 <!DOCTYPE html>
-<html>
-  <head> 
-    <meta charset="utf-8"> 
-    <link rel="stylesheet" href="reset.css"> 
-    <link rel="stylesheet" href="index.css">   
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">     
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
-    <title>JS JQuery</title> 
-  </head> 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/reset.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Allura" rel="stylesheet">   
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+ 
+    <title>Home Page</title>
+</head>
+<body>
+    
+    <header class="header">
+        <div class="center">
+            <a class="logo" href="index.html"><img src="images/meal-icon.png" alt=""></a>
+            <span class="toggle-nav">Menu</span>
+            <nav class="top-menu collapse">
+                <ul>
+                    <li class="menu-header selected"><a href="" class="button">Home Page</a></li>
+                    <li class="menu-header"><a href="form.html" class="button">Form Page</a></li>
+                    <li class="menu-header"><a href="map.html" class="button">Map Page</a></li>
+                    <li class="menu-header"><a href="api.html" class="button">Api Page</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <body>
-    <div class="header">
-      <h1>My Friends</h1>
+    <div class="hidden-panel">
+            <h1>Here is a gallery of our most recently added meals!</h1>
     </div>
-    <div id="userSection">
+
+    <!-- Image Gallery :D -->
+
+    <div class="container-gallery" id="gallery">
+
+        <a class="prev" id="button" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" id="button"  onclick="plusSlides(1)">&#10095;</a>
+
+        <div class="button-container" id="button">
+                <button class="button-api" id="info">
+                    How to prepare
+                </button>
+        </div>
 
     </div>
-    <script src="index.js"></script>    
-  </body>
-  
+
+    <footer class="footer">
+        <h1>Copyright (c) 2018 Brandon Kelly. All Rights Reserved.  </h1>
+        <div class="icons">
+            <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://github.com/brandonthomaskelly"  target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+    </footer>
+
+    <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+
+</body>
 </html>
